<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F172A"
    tools:context="dev.a2ys.conversa.authentication.fragments.AuthChooserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="32dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textColor="#94A3B8"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_conversa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="48sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_auth_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:text="@string/continue_with_email"
            android:textColor="#FFFFFF"
            app:backgroundTint="#1E293B"
            app:cornerRadius="12dp"
            app:strokeColor="#334155"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/phone_auth_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/continue_with_phone_number"
            android:textColor="#0F172A"
            app:backgroundTint="#38BDF8"
            app:cornerRadius="12dp" />
            
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
